--- a/data/chap05.tex
+++ b/data/chap05.tex
@@ -44,20 +44,20 @@
   \caption{瞬时流场的涡结构图}
 \end{figure}
 对于这一基本流动，对其进行条件平均，分别在$y^+=10,15,20$的平面上进行涡探测，用Q作为探测标准。然后进行条件平均，得到：
+%\begin{figure}
+%  \centering
+%  \includegraphics[width=0.5\textwidth]{thu-fig-logo}
+%  \caption{$y^+=10$条件平均}
+%\end{figure}
+%\begin{figure}
+%  \centering
+%  \includegraphics[width=0.5\textwidth]{thu-fig-logo}
+%  \caption{$y^+=15$条件平均}
+%\end{figure}
 \begin{figure}
   \centering
-  \includegraphics[width=0.5\textwidth]{thu-fig-logo}
-  \caption{$y^+=10$条件平均}
-\end{figure}
-\begin{figure}
-  \centering
-  \includegraphics[width=0.5\textwidth]{thu-fig-logo}
-  \caption{$y^+=15$条件平均}
-\end{figure}
-\begin{figure}
-  \centering
-  \includegraphics[width=0.5\textwidth]{thu-fig-logo}
-  \caption{$y^+=12$条件平均}
+  \includegraphics[width=\textwidth]{ch5/condit_aver.jpeg}
+  \caption{$y^+=20$条件平均}
 \end{figure}
 
 \section{定常激励控制方案}
@@ -111,7 +111,7 @@
 流向平均与时间平均对比：
 \begin{figure}[h]
   \centering
-  \subcaptionbox{Vortex Force: U}[0.45\textwidth] 
+  \subcaptionbox{Vortex Force: U}[0.45\textwidth]
     {\includegraphics[width=0.45\textwidth]{ch5/VortexF/U.png}}
   \subcaptionbox{Vortex Force: V}[0.45\textwidth]
     {\includegraphics[width=0.45\textwidth]{ch5/VortexF/V.png}}
@@ -219,3 +219,267 @@ $T^+=52$相平均：
     {\includegraphics[width=0.45\textwidth]{ch5/POLIMI/uv.png}}%
   \caption{POLIMI二阶统计量对比}
 \end{figure}
+\begin{figure}
+  \centering
+  \subcaptionbox{POLIMI}[0.45\textwidth]
+    {\includegraphics[width=0.45\textwidth]{ch5/POLIMI/POLIMI_num_vort.jpeg}}
+  \subcaptionbox{16DBD}[0.45\textwidth]
+    {\includegraphics[width=0.45\textwidth]{ch5/16DBD/16DBD_num_vort.jpeg}}
+  \caption{不同相位探测到的涡个数}
+\end{figure}
+\begin{figure}
+  \centering
+  \subcaptionbox{条件平均}[0.8\textwidth]
+    {\includegraphics[height=7cm]{ch5/POLIMI/condit_0.jpeg}}
+  \subcaptionbox{展向速度}[0.18\textwidth]
+    {\includegraphics[height=7cm]{ch5/POLIMI/phase_0.jpeg}}
+  \caption{POLIMI体积力分布$0/16\pi$相平均}
+\end{figure}
+\begin{figure}
+  \centering
+  \subcaptionbox{条件平均}[0.8\textwidth]
+    {\includegraphics[height=7cm]{ch5/POLIMI/condit_1.jpeg}}
+  \subcaptionbox{展向速度}[0.18\textwidth]
+    {\includegraphics[height=7cm]{ch5/POLIMI/phase_1.jpeg}}
+  \caption{POLIMI体积力分布$1/16\pi$相平均}
+\end{figure}
+\begin{figure}
+  \centering
+  \subcaptionbox{条件平均}[0.8\textwidth]
+    {\includegraphics[height=7cm]{ch5/POLIMI/condit_2.jpeg}}
+  \subcaptionbox{展向速度}[0.18\textwidth]
+    {\includegraphics[height=7cm]{ch5/POLIMI/phase_2.jpeg}}
+  \caption{POLIMI体积力分布$2/16\pi$相平均}
+\end{figure}
+\begin{figure}
+  \centering
+  \subcaptionbox{条件平均}[0.8\textwidth]
+    {\includegraphics[height=7cm]{ch5/POLIMI/condit_3.jpeg}}
+  \subcaptionbox{展向速度}[0.18\textwidth]
+    {\includegraphics[height=7cm]{ch5/POLIMI/phase_3.jpeg}}
+  \caption{POLIMI体积力分布$3/16\pi$相平均}
+\end{figure}
+\begin{figure}
+  \centering
+  \subcaptionbox{条件平均}[0.8\textwidth]
+    {\includegraphics[height=7cm]{ch5/POLIMI/condit_4.jpeg}}
+  \subcaptionbox{展向速度}[0.18\textwidth]
+    {\includegraphics[height=7cm]{ch5/POLIMI/phase_4.jpeg}}
+  \caption{POLIMI体积力分布$4/16\pi$相平均}
+\end{figure}
+\begin{figure}
+  \centering
+  \subcaptionbox{条件平均}[0.8\textwidth]
+    {\includegraphics[height=7cm]{ch5/POLIMI/condit_5.jpeg}}
+  \subcaptionbox{展向速度}[0.18\textwidth]
+    {\includegraphics[height=7cm]{ch5/POLIMI/phase_5.jpeg}}
+  \caption{POLIMI体积力分布$5/16\pi$相平均}
+\end{figure}
+\begin{figure}
+  \centering
+  \subcaptionbox{条件平均}[0.8\textwidth]
+    {\includegraphics[height=7cm]{ch5/POLIMI/condit_6.jpeg}}
+  \subcaptionbox{展向速度}[0.18\textwidth]
+    {\includegraphics[height=7cm]{ch5/POLIMI/phase_6.jpeg}}
+  \caption{POLIMI体积力分布$6/16\pi$相平均}
+\end{figure}
+\begin{figure}
+  \centering
+  \subcaptionbox{条件平均}[0.8\textwidth]
+    {\includegraphics[height=7cm]{ch5/POLIMI/condit_7.jpeg}}
+  \subcaptionbox{展向速度}[0.18\textwidth]
+    {\includegraphics[height=7cm]{ch5/POLIMI/phase_7.jpeg}}
+  \caption{POLIMI体积力分布$7/16\pi$相平均}
+\end{figure}
+\begin{figure}
+  \centering
+  \subcaptionbox{条件平均}[0.8\textwidth]
+    {\includegraphics[height=7cm]{ch5/POLIMI/condit_8.jpeg}}
+  \subcaptionbox{展向速度}[0.18\textwidth]
+    {\includegraphics[height=7cm]{ch5/POLIMI/phase_8.jpeg}}
+  \caption{POLIMI体积力分布$8/16\pi$相平均}
+\end{figure}
+\begin{figure}
+  \centering
+  \subcaptionbox{条件平均}[0.8\textwidth]
+    {\includegraphics[height=7cm]{ch5/POLIMI/condit_9.jpeg}}
+  \subcaptionbox{展向速度}[0.18\textwidth]
+    {\includegraphics[height=7cm]{ch5/POLIMI/phase_9.jpeg}}
+  \caption{POLIMI体积力分布$9/16\pi$相平均}
+\end{figure}
+\begin{figure}
+  \centering
+  \subcaptionbox{条件平均}[0.8\textwidth]
+    {\includegraphics[height=7cm]{ch5/POLIMI/condit_10.jpeg}}
+  \subcaptionbox{展向速度}[0.18\textwidth]
+    {\includegraphics[height=7cm]{ch5/POLIMI/phase_10.jpeg}}
+  \caption{POLIMI体积力分布$10/16\pi$相平均}
+\end{figure}
+\begin{figure}
+  \centering
+  \subcaptionbox{条件平均}[0.8\textwidth]
+    {\includegraphics[height=7cm]{ch5/POLIMI/condit_11.jpeg}}
+  \subcaptionbox{展向速度}[0.18\textwidth]
+    {\includegraphics[height=7cm]{ch5/POLIMI/phase_11.jpeg}}
+  \caption{POLIMI体积力分布$11/16\pi$相平均}
+\end{figure}
+\begin{figure}
+  \centering
+  \subcaptionbox{条件平均}[0.8\textwidth]
+    {\includegraphics[height=7cm]{ch5/POLIMI/condit_12.jpeg}}
+  \subcaptionbox{展向速度}[0.18\textwidth]
+    {\includegraphics[height=7cm]{ch5/POLIMI/phase_12.jpeg}}
+  \caption{POLIMI体积力分布$12/16\pi$相平均}
+\end{figure}
+\begin{figure}
+  \centering
+  \subcaptionbox{条件平均}[0.8\textwidth]
+    {\includegraphics[height=7cm]{ch5/POLIMI/condit_13.jpeg}}
+  \subcaptionbox{展向速度}[0.18\textwidth]
+    {\includegraphics[height=7cm]{ch5/POLIMI/phase_13.jpeg}}
+  \caption{POLIMI体积力分布$13/16\pi$相平均}
+\end{figure}
+\begin{figure}
+  \centering
+  \subcaptionbox{条件平均}[0.8\textwidth]
+    {\includegraphics[height=7cm]{ch5/POLIMI/condit_14.jpeg}}
+  \subcaptionbox{展向速度}[0.18\textwidth]
+    {\includegraphics[height=7cm]{ch5/POLIMI/phase_14.jpeg}}
+  \caption{POLIMI体积力分布$14/16\pi$相平均}
+\end{figure}
+\begin{figure}
+  \centering
+  \subcaptionbox{条件平均}[0.8\textwidth]
+    {\includegraphics[height=7cm]{ch5/POLIMI/condit_15.jpeg}}
+  \subcaptionbox{展向速度}[0.18\textwidth]
+    {\includegraphics[height=7cm]{ch5/POLIMI/phase_15.jpeg}}
+  \caption{POLIMI体积力分布$15/16\pi$相平均}
+\end{figure}
+\begin{figure}
+  \centering
+  \subcaptionbox{条件平均}[0.8\textwidth]
+    {\includegraphics[height=7cm]{ch5/16DBD/condit_0.jpeg}}
+  \subcaptionbox{展向速度}[0.18\textwidth]
+    {\includegraphics[height=7cm]{ch5/16DBD/phase_0.jpeg}}
+  \caption{16DBD体积力分布$0/16\pi$相平均}
+\end{figure}
+\begin{figure}
+  \centering
+  \subcaptionbox{条件平均}[0.8\textwidth]
+    {\includegraphics[height=7cm]{ch5/16DBD/condit_1.jpeg}}
+  \subcaptionbox{展向速度}[0.18\textwidth]
+    {\includegraphics[height=7cm]{ch5/16DBD/phase_1.jpeg}}
+  \caption{16DBD体积力分布$1/16\pi$相平均}
+\end{figure}
+\begin{figure}
+  \centering
+  \subcaptionbox{条件平均}[0.8\textwidth]
+    {\includegraphics[height=7cm]{ch5/16DBD/condit_2.jpeg}}
+  \subcaptionbox{展向速度}[0.18\textwidth]
+    {\includegraphics[height=7cm]{ch5/16DBD/phase_2.jpeg}}
+  \caption{16DBD体积力分布$2/16\pi$相平均}
+\end{figure}
+\begin{figure}
+  \centering
+  \subcaptionbox{条件平均}[0.8\textwidth]
+    {\includegraphics[height=7cm]{ch5/16DBD/condit_3.jpeg}}
+  \subcaptionbox{展向速度}[0.18\textwidth]
+    {\includegraphics[height=7cm]{ch5/16DBD/phase_3.jpeg}}
+  \caption{16DBD体积力分布$3/16\pi$相平均}
+\end{figure}
+\begin{figure}
+  \centering
+  \subcaptionbox{条件平均}[0.8\textwidth]
+    {\includegraphics[height=7cm]{ch5/16DBD/condit_4.jpeg}}
+  \subcaptionbox{展向速度}[0.18\textwidth]
+    {\includegraphics[height=7cm]{ch5/16DBD/phase_4.jpeg}}
+  \caption{16DBD体积力分布$4/16\pi$相平均}
+\end{figure}
+\begin{figure}
+  \centering
+  \subcaptionbox{条件平均}[0.8\textwidth]
+    {\includegraphics[height=7cm]{ch5/16DBD/condit_5.jpeg}}
+  \subcaptionbox{展向速度}[0.18\textwidth]
+    {\includegraphics[height=7cm]{ch5/16DBD/phase_5.jpeg}}
+  \caption{16DBD体积力分布$5/16\pi$相平均}
+\end{figure}
+\begin{figure}
+  \centering
+  \subcaptionbox{条件平均}[0.8\textwidth]
+    {\includegraphics[height=7cm]{ch5/16DBD/condit_6.jpeg}}
+  \subcaptionbox{展向速度}[0.18\textwidth]
+    {\includegraphics[height=7cm]{ch5/16DBD/phase_6.jpeg}}
+  \caption{16DBD体积力分布$6/16\pi$相平均}
+\end{figure}
+\begin{figure}
+  \centering
+  \subcaptionbox{条件平均}[0.8\textwidth]
+    {\includegraphics[height=7cm]{ch5/16DBD/condit_7.jpeg}}
+  \subcaptionbox{展向速度}[0.18\textwidth]
+    {\includegraphics[height=7cm]{ch5/16DBD/phase_7.jpeg}}
+  \caption{16DBD体积力分布$7/16\pi$相平均}
+\end{figure}
+\begin{figure}
+  \centering
+  \subcaptionbox{条件平均}[0.8\textwidth]
+    {\includegraphics[height=7cm]{ch5/16DBD/condit_8.jpeg}}
+  \subcaptionbox{展向速度}[0.18\textwidth]
+    {\includegraphics[height=7cm]{ch5/16DBD/phase_8.jpeg}}
+  \caption{16DBD体积力分布$8/16\pi$相平均}
+\end{figure}
+\begin{figure}
+  \centering
+  \subcaptionbox{条件平均}[0.8\textwidth]
+    {\includegraphics[height=7cm]{ch5/16DBD/condit_9.jpeg}}
+  \subcaptionbox{展向速度}[0.18\textwidth]
+    {\includegraphics[height=7cm]{ch5/16DBD/phase_9.jpeg}}
+  \caption{16DBD体积力分布$9/16\pi$相平均}
+\end{figure}
+\begin{figure}
+  \centering
+  \subcaptionbox{条件平均}[0.8\textwidth]
+    {\includegraphics[height=7cm]{ch5/16DBD/condit_10.jpeg}}
+  \subcaptionbox{展向速度}[0.18\textwidth]
+    {\includegraphics[height=7cm]{ch5/16DBD/phase_10.jpeg}}
+  \caption{16DBD体积力分布$10/16\pi$相平均}
+\end{figure}
+\begin{figure}
+  \centering
+  \subcaptionbox{条件平均}[0.8\textwidth]
+    {\includegraphics[height=7cm]{ch5/16DBD/condit_11.jpeg}}
+  \subcaptionbox{展向速度}[0.18\textwidth]
+    {\includegraphics[height=7cm]{ch5/16DBD/phase_11.jpeg}}
+  \caption{16DBD体积力分布$11/16\pi$相平均}
+\end{figure}
+\begin{figure}
+  \centering
+  \subcaptionbox{条件平均}[0.8\textwidth]
+    {\includegraphics[height=7cm]{ch5/16DBD/condit_12.jpeg}}
+  \subcaptionbox{展向速度}[0.18\textwidth]
+    {\includegraphics[height=7cm]{ch5/16DBD/phase_12.jpeg}}
+  \caption{16DBD体积力分布$12/16\pi$相平均}
+\end{figure}
+\begin{figure}
+  \centering
+  \subcaptionbox{条件平均}[0.8\textwidth]
+    {\includegraphics[height=7cm]{ch5/16DBD/condit_13.jpeg}}
+  \subcaptionbox{展向速度}[0.18\textwidth]
+    {\includegraphics[height=7cm]{ch5/16DBD/phase_13.jpeg}}
+  \caption{16DBD体积力分布$13/16\pi$相平均}
+\end{figure}
+\begin{figure}
+  \centering
+  \subcaptionbox{条件平均}[0.8\textwidth]
+    {\includegraphics[height=7cm]{ch5/16DBD/condit_14.jpeg}}
+  \subcaptionbox{展向速度}[0.18\textwidth]
+    {\includegraphics[height=7cm]{ch5/16DBD/phase_14.jpeg}}
+  \caption{16DBD体积力分布$14/16\pi$相平均}
+\end{figure}
+\begin{figure}
+  \centering
+  \subcaptionbox{条件平均}[0.8\textwidth]
+    {\includegraphics[height=7cm]{ch5/16DBD/condit_15.jpeg}}
+  \subcaptionbox{展向速度}[0.18\textwidth]
+    {\includegraphics[height=7cm]{ch5/16DBD/phase_15.jpeg}}
+  \caption{16DBD体积力分布$15/16\pi$相平均}
+\end{figure} 
